@@ -189,6 +189,125 @@ ATF_TC_BODY(isc_buffer_dynamic, tc) {
 	isc_test_end();
 }
 
+ATF_TC(isc_buffer_printf);
+ATF_TC_HEAD(isc_buffer_printf, tc) {
+	atf_tc_set_md_var(tc, "descr", "printf() into a buffer");
+}
+
+ATF_TC_BODY(isc_buffer_printf, tc) {
+	const char *bad_fmt, *empty_fmt;
+	unsigned int used, prev_used;
+	isc_result_t result;
+	isc_buffer_t *b, sb;
+	char buf[8];
+
+	result = isc_test_begin(NULL, ISC_TRUE);
+	ATF_REQUIRE_EQ(result, ISC_R_SUCCESS);
+
+	/*
+	 * Prepare a buffer with auto-reallocation enabled.
+	 */
+	b = NULL;
+	result = isc_buffer_allocate(mctx, &b, 0);
+	ATF_REQUIRE_EQ(result, ISC_R_SUCCESS);
+	isc_buffer_setautorealloc(b, ISC_TRUE);
+
+	/*
+	 * Sanity check.
+	 */
+	result = isc_buffer_printf(b, "foo");
+	ATF_CHECK_EQ(result, ISC_R_SUCCESS);
+	used = isc_buffer_usedlength(b);
+	ATF_CHECK_EQ(used, 3);
+
+	result = isc_buffer_printf(b, "bar");
+	ATF_CHECK_EQ(result, ISC_R_SUCCESS);
+	used = isc_buffer_usedlength(b);
+	ATF_CHECK_EQ(used, 3 + 3);
+
+	/*
+	 * Also check the terminating NULL byte is there, even though it is not
+	 * part of the buffer's used region.
+	 */
+	ATF_CHECK_EQ(memcmp(isc_buffer_current(b), "foobar", 7), 0);
+
+	/*
+	 * Skip over data from previous check to prevent failures in previous
+	 * check from affecting this one.
+	 */
+	prev_used = used;
+	isc_buffer_forward(b, prev_used);
+
+	/*
+	 * Some standard usage checks.
+	 */
+	isc_buffer_printf(b, "%d", 42);
+	used = isc_buffer_usedlength(b);
+	ATF_CHECK_EQ(used - prev_used, 2);
+
+	isc_buffer_printf(b, "baz%1X", 42);
+	used = isc_buffer_usedlength(b);
+	ATF_CHECK_EQ(used - prev_used, 2 + 5);
+
+	isc_buffer_printf(b, "%6.1f", 42.42f);
+	used = isc_buffer_usedlength(b);
+	ATF_CHECK_EQ(used - prev_used, 2 + 5 + 6);
+
+	/*
+	 * Also check the terminating NULL byte is there, even though it is not
+	 * part of the buffer's used region.
+	 */
+	ATF_CHECK_EQ(memcmp(isc_buffer_current(b), "42baz2A  42.4", 14), 0);
+
+	/*
+	 * Check an empty format string is properly handled.
+	 */
+	prev_used = used;
+	empty_fmt = "";
+	result = isc_buffer_printf(b, empty_fmt, NULL);
+	ATF_CHECK_EQ(result, ISC_R_SUCCESS);
+	used = isc_buffer_usedlength(b);
+	ATF_CHECK_EQ(prev_used, used);
+
+	/*
+	 * Ensure vsnprintf() errors do not cause the buffer to be modified.
+	 */
+	prev_used = used;
+	bad_fmt = "%";
+	result = isc_buffer_printf(b, bad_fmt, NULL);
+	ATF_CHECK_EQ(result, ISC_R_FAILURE);
+	used = isc_buffer_usedlength(b);
+	ATF_CHECK_EQ(prev_used, used);
+
+	isc_buffer_free(&b);
+
+	/*
+	 * Check overflow on a static buffer.
+	 */
+	isc_buffer_init(&sb, buf, sizeof(buf));
+	result = isc_buffer_printf(&sb, "123456");
+	ATF_CHECK_EQ(result, ISC_R_SUCCESS);
+	used = isc_buffer_usedlength(&sb);
+	ATF_CHECK_EQ(used, 6);
+
+	result = isc_buffer_printf(&sb, "789");
+	ATF_CHECK_EQ(result, ISC_R_NOSPACE);
+	used = isc_buffer_usedlength(&sb);
+	ATF_CHECK_EQ(used, 6);
+
+	result = isc_buffer_printf(&sb, "78");
+	ATF_CHECK_EQ(result, ISC_R_NOSPACE);
+	used = isc_buffer_usedlength(&sb);
+	ATF_CHECK_EQ(used, 6);
+
+	result = isc_buffer_printf(&sb, "7");
+	ATF_CHECK_EQ(result, ISC_R_SUCCESS);
+	used = isc_buffer_usedlength(&sb);
+	ATF_CHECK_EQ(used, 7);
+
+	isc_test_end();
+}
+
 /*
  * Main
  */
@@ -196,5 +315,6 @@ ATF_TP_ADD_TCS(tp) {
 	ATF_TP_ADD_TC(tp, isc_buffer_reserve);
 	ATF_TP_ADD_TC(tp, isc_buffer_reallocate);
 	ATF_TP_ADD_TC(tp, isc_buffer_dynamic);
+	ATF_TP_ADD_TC(tp, isc_buffer_printf);
 	return (atf_no_error());
 }
